--- a/assets/css/pedalmaster.css
+++ b/assets/css/pedalmaster.css
@@ -1,9 +1,10 @@
 body {
     padding-top: 50px;
+    font-size: 24px;
 }
 
 .gauge-speed {
     text-align: center;
     font-family: monospace;
-    font-size: 4em;
+    font-size: 7em;
 }
