--- a/assets/css/pedalmaster-dark.css
+++ b/assets/css/pedalmaster-dark.css
@@ -1,3 +1,12 @@
 body {
     background-color: #000;
+    overflow: hidden;
+}
+
+.btn-default {
+    background-color: #0f0f0f;
+}
+
+.btn-default:hover {
+    background-color: #5cb85c;
 }
