--- a/assets/css/quillpedalpi.css
+++ b/assets/css/quillpedalpi.css
@@ -1,9 +1,31 @@
 body {
     font-size: 24px;
+    font-family: monospace;
+}
+
+div#mode {
+    float: left;
+    font-size: 0.8em;
+    color: #2b669a;
 }
 
 .gauge-speed {
     text-align: center;
-    font-family: monospace;
     font-size: 6.5em;
+}
+
+ul.travel-list {
+    text-align: left;
+}
+
+div.stopwatch {
+    font-size: 2em;
+}
+ul.results {
+    font-size: 0.8em;
+    max-height: 150px;
+    overflow-y: scroll;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
